# docsharvester

./: .gitignore  PRD.md  README.md  pyproject.toml
.cursor/rules/: project-method.mdc  story-template.mdc  tdd-method.mdc  use-uv.mdc
Project docs/: architecture_plan.md  backlog.md
Project docs/Stories DONE/: STORY-002.md  STORY-004.md  STORY-005.md  STORY-006.md  STORY-009-1.md  STORY-009-2.md  STORY-009-3.md  STORY-009-4.md
Project docs/Stories TODO/: STORY-001.md  STORY-003.md  STORY-007.md  STORY-008.md  STORY-009-3.md  STORY-009-4.md  STORY-009-5.md  STORY-009.md  STORY-010.md  STORY-011.md  STORY-012.md  STORY-013.md
config/: config.yaml
mcp_doc_getter/: main.py
mcp_doc_getter/config/: mcp_config.yaml
mcp_doc_getter/src/config_manager/: __init__.py  config_manager.py
mcp_doc_getter/src/content_extractor/: __init__.py  content_extractor.py
tests/: README.md  conftest.py  test_mcp_specific.py  test_utils.py
tests/config_manager/: test_config_manager.py
tests/content_extractor/: __init__.py  test_content_extractor.py
tests/error_handler/: __init__.py  test_error_handler.py
tests/file_system_manager/: __init__.py  test_file_system_manager.py
tests/integration/: __init__.py  test_integration.py
tests/link_handler/: __init__.py  test_link_handler.py
tests/markdown_converter/: __init__.py  test_markdown_converter.py
tests/validation/: test_content_validator.py  test_external_link_validator.py  test_validation_infrastructure.py  validation_config.yaml
tests/web_crawler/: __init__.py  test_web_crawler.py
(+21 files in other folders)
