[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_doc_getter"
version = "0.1.0"
description = "Documentation scraper for AI frameworks that converts HTML to Markdown"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "beautifulsoup4>=4.10.0",
    "httpx>=0.24.0",
    "markdown>=3.4.0",
    "pyyaml>=6.0",
    "html2text>=2020.1.16",
    "reppy>=0.4.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-scraper = "mcp_doc_getter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_doc_getter"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 